@@ -1,0 +1,9 @@
+﻿namespace Carbon.Iis
+{
+    public enum HttpResponseStatus : ushort
+    {
+        Found = 302,
+        Permanent = 301,
+        Temporary = 307
+    }
+}
