@@ -41,43 +41,44 @@ function Test-ShouldRedirectSite
     Assert-Equal 'http://www.example.com' $settings.Destination
     Assert-False $settings.ExactDestination
     Assert-False $settings.ChildOnly
+    Assert-Equal Found $settings.HttpResponseStatus
 }
 
 function Test-ShouldSetREdirectCustomizations
 {
-    Set-IisHttpRedirect -SiteName $SiteName -Destination 'http://example.com' -StatusCode 'Permanent' -ExactDestination -ChildOnly
+    Set-IisHttpRedirect -SiteName $SiteName -Destination 'http://www.example.com' -HttpResponseStatus 'Permanent' -ExactDestination -ChildOnly
     Assert-Redirects
     $settings = Get-IisHttpRedirect -SiteName $SiteName
-    Assert-Equal 'http://example.com' $settings.Destination
-    Assert-Equal 'Permanent' $settings.StatusCode
+    Assert-Equal 'http://www.example.com' $settings.Destination
+    Assert-Equal 'Permanent' $settings.HttpResponseStatus
     Assert-True $settings.ExactDestination
     Assert-True $settings.ChildOnly
 }
 
 function Test-ShouldSetToDefaultValues
 {
-    Set-IisHttpRedirect -SiteName $SiteName -Destination 'http://example.com' -StatusCode 'Permanent' -ExactDestination -ChildOnly
+    Set-IisHttpRedirect -SiteName $SiteName -Destination 'http://www.example.com' -HttpResponseStatus 'Permanent' -ExactDestination -ChildOnly
     Assert-Redirects
     Set-IisHttpRedirect -SiteName $SiteName -Destination 'http://www.example.com'
     Assert-Redirects
 
     $settings = Get-IisHttpRedirect -SiteName $SiteName
     Assert-Equal 'http://www.example.com' $settings.Destination
-    Assert-Equal 'Found' $settings.StatusCode
+    Assert-Equal 'Found' $settings.HttpResponseStatus
     Assert-False $settings.ExactDestination 'exact destination not reverted'
     Assert-False $settings.ChildOnly 'child only not reverted'
 }
 
 function Test-ShouldSetRedirectOnPath
 {
-    Set-IisHttpRedirect -SiteName $SiteName -Path SubFolder -Destination 'http://example.com'
+    Set-IisHttpRedirect -SiteName $SiteName -Path SubFolder -Destination 'http://www.example.com'
     Assert-Redirects -Path Subfolder
     $content = Read-Url -Path 'NewWebsite.html'
     Assert-True ($content -match 'NewWebsite') 'Redirected root page'
     
     $settings = Get-IisHttpREdirect -SiteName $SiteName -Path SubFolder
     Assert-True $settings.Enabled
-    Assert-Equal 'http://example.com' $settings.Destination
+    Assert-Equal 'http://www.example.com' $settings.Destination
 }
 
 function Read-Url($Path = '')
@@ -96,7 +97,7 @@ function Assert-Redirects($Path = '')
         try
         {
             $content = Read-Url $Path
-            if( $content -match 'example.com' )
+            if( $content -match 'Example Domain' )
             {
                 break
             }
